<resources>
<!-- titulo -->
    <string name="tittle">Folha de Pagamento</string>
    <!-- Strings entradas -->
    <string name="app_name">APP Folha de Pagamento</string>
    <string name="salarioBruto">Salário Bruto</string>
    <string name="numDependentes">N° Dependentes</string>
    <string name="planoSaude">Plano de Saúde</string>
    <string name="beneficios">Beneficios</string>
    <string name="tAlim">Vale Alimentação</string>
    <string name="tTrans">Vale Transporte</string>
    <string name="tRefei">Vale Refeição</string>
    <string name="calcular">APP Folha de Pagamento</string>


<!--    array opcões planos de saude-->
    <string-array name="planos">
        <item >Nenhum</item>
        <item>Standard</item>
        <item>Básico</item>
        <item>Super</item>
        <item>Master</item>
    </string-array>



    <!-- Strings saidas -->

    <string name="salarioLiquido">Salário Líquido</string>
    <string name="vPlano">Valor do plano</string>
    <string name="vAlim">Valor Va</string>
    <string name="vTrans">Valor VT</string>
    <string name="vRefei">Valor VR</string>
    <string name="descINSS">Desconto INSS</string>
    <string name="descIRRF">Desconto IRRF</string>
    <string name="porceDesc">% de desconto</string>
    <string name="totalDesc">Desconto</string>


    <!-- Radio Gruop/Button -->
    <string name="btnVA0">Não</string>
    <string name="btnVA1">Sim</string>

    <string name="btnVR0">Não</string>
    <string name="btnVR1">Sim</string>

    <string name="btnVT0">Não</string>
    <string name="btnVT1">Sim</string>

    <string name="Enviar">Enviar</string>
    <string name="Refazer">Refazer</string>


</resources>